--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.23.1"
+    "react-intersection-observer": "^9.13.1",
+    "react-router-dom": "^6.23.1",
+    "react-spring": "^9.7.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
