--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/parallax": "^9.7.4",
     "framer-motion": "^11.3.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
