--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "@react-spring/parallax": "^9.7.4",
     "emailjs-com": "^3.2.0",
-    "firebase": "^10.13.1",
+    "firebase": "^10.14.1",
     "framer-motion": "^11.3.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.13.1",
-    "react-router-dom": "^6.23.1",
-    "react-spring": "^9.7.4"
+    "react-router-dom": "^6.30.1",
+    "react-spring": "^9.7.4",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
